novisible fixed

--- a/.sass/components/_features.scss
+++ b/.sass/components/_features.scss
@@ -1,3 +1,7 @@
+.feature__main-title {
+  @extend %novisible;
+}
+
 .feature__list {
   display: flex;
 }
